--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@fontsource/inter": "^5.0.19",
+    "@monaco-editor/react": "^4.6.0",
+    "@mui/icons-material": "^5.16.5",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^5.16.5",
     "axios": "^1.7.2",
     "highlight.js": "^11.10.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
