--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@mui/material": "^5.16.5",
     "axios": "^1.7.2",
     "highlight.js": "^11.10.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "socket.io-client": "^4.7.5",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
