--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_FRONTEND_API_BASE_URL=http://localhost:8000/api/
-VITE_WEBSOCKET_BASE_URL=ws://localhost:8000
+VITE_FRONTEND_API_BASE_URL=https://learning-backend-dev.up.railway.app/api/
+VITE_WEBSOCKET_BASE_URL=wss://learning-backend-dev.up.railway.app/ws
 REACT_APP_API_BASE_URL=https://learning-backend-dev.up.railway.app/api/
